Fixed the double scrolling issue

--- a/assets/combined.css
+++ b/assets/combined.css
@@ -5469,6 +5469,7 @@ h1 {
   top: 0;
   bottom: 0;
   overflow: scroll;
+  -webkit-overflow-scrolling: touch;
   z-index: 2;
 }
 
@@ -5515,6 +5516,8 @@ h1 {
 
 .noscroll {
   overflow: hidden;
+  position: fixed;
+  height: 100%;
 }
 
 .ui-shadow-inset {
