--- a/src/style/_style.scss
+++ b/src/style/_style.scss
@@ -157,11 +157,8 @@ h1 {
   // left: 0;
   // right: 0;
   overflow: scroll;
+  -webkit-overflow-scrolling: touch;
   z-index: 2;
-}
-
-.filters {
-
 }
 
 .hide {
@@ -210,6 +207,8 @@ h1 {
 
 .noscroll {
   overflow: hidden;
+  position: fixed;
+  height: 100%;
 }
 
 .ui-shadow-inset {
